--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "joi": "^17.13.3",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.2",
+    "morgan": "~1.9.1",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/joi": "^17.2.3",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.5.5",
     "nodemon": "^3.1.4",
     "typescript": "^5.6.2"
