--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node ./dist/bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "npm run build && nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
@@ -15,14 +16,20 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "joi": "^17.13.3",
+    "joi-extract-type": "^15.0.8",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
     "morgan": "~1.9.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "winston": "^3.14.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
-    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.5.5",
     "nodemon": "^3.1.4",
